c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/bad_null_pointer_constant.c
int main(void)
{
    // only integers can be null pointer constants
    int *x = 0.0;
    return 0;
}